# DeepRecall

./: .gitignore  README.md  pyproject.toml  requirements.txt
deeprecall/: __init__.py  config.py  models.py  pipeline.py
deeprecall/generation/: generator.py
deeprecall/indexing/: __init__.py  dense.py  graph.py  sparse.py  store.py  structural.py
deeprecall/ingestion/: __init__.py  chunker.py  enrichment.py  parser.py
deeprecall/retrieval/: __init__.py  assembly.py  engine.py  fusion.py  query.py  rerank.py
examples/: demo.py
examples/sample_docs/: api-gateway.md  kubernetes-guide.md
tests/: test_pipeline.py
tools/: build_pdf.py
